--- a/assets/_scss/_archive.scss
+++ b/assets/_scss/_archive.scss
@@ -22,6 +22,44 @@
   }
 }
 
+.responsive-iframe-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+}
+
+.responsive-iframe-container iframe,
+.vresponsive-iframe-container object,
+.vresponsive-iframe-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.calendar-desktop {
+  display: none;
+}
+
+@media screen and (min-width: 481px) {
+  .calendar-desktop {
+    display: block;
+  }
+}
+
+.calendar-mobile {
+  display: none;
+}
+
+@media screen and (max-width: 480px) {
+  .calendar-mobile {
+    display: block;
+  }
+}
+
 .archive__subtitle {
   margin: 2em 0 0;
   padding-bottom: 0.5em;
