--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 
 
 <link href="/feed.xml" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
-
+<title>{{ site.title }}</title>
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
