--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -4,7 +4,7 @@
   {% capture teaser %}{{ site.teaser }}{% endcapture %}
 {% endif %}
 
-<div class="{{ include.type | default: "list" }}__item">
+<!-- <div class="{{ include.type | default: "list" }}__item">
   {% if post.link %}
     <a href="{{ post.link }}" target="_blank">
   {% else %}
@@ -27,4 +27,4 @@
       {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
     </article>
   </a>
-</div>
+</div> -->
