--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@ layout: compress
         <div class="container">
           <div class="post-list" itemscope="" itemtype="http://schema.org/Blog">
 
-            {% for post in site.posts %}
+            {% for post in site.posts limit:6 %}
               {% include card.html %}
             {% endfor %}
 
