--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,11 @@ layout: compress
     </div>
 
     <main class="site__content">
+ <!--      <br>
+      <center>
+        <iframe src="https://calendar.google.com/calendar/embed?height=700&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=acmmanoa%40hawaii.edu&amp;color=%2329527A&amp;ctz=Pacific%2FHonolulu" style="border-width:0" width="1000" height="700" frameborder="0" scrolling="no"></iframe>
+      </center> -->
+       
       <section class="blog">
         <div class="container">
           <div class="post-list" itemscope="" itemtype="http://schema.org/Blog">
