--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,14 @@ layout: compress
     </main>
 
     {% include footer.html %}
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120243010-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'UA-120243010-1');
+  </script>
   </body>
 
 </html>
