--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -112,6 +112,15 @@ layout: compress
 
   {% include footer.html %}
   {% include mathjax.html %}
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120243010-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120243010-1');
+</script>
 </body>
 
 </html>
