Add instant loader

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,7 @@ layout: compress
 
     gtag('config', 'UA-120243010-1');
   </script>
+  <script src="//instant.page/1.0.0" type="module" integrity="sha384-6w2SekMzCkuMQ9sEbq0cLviD/yR2HfA/+ekmKiBnFlsoSvb/VmQFSi/umVShadQI"></script>
   </body>
 
 </html>
