--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,8 @@ layout: compress
       <section class="blog">
         <div class="container">
           <div class="post-list" itemscope="" itemtype="http://schema.org/Blog">
-
-      
+       
+            {% for post in site.posts limit: 10 %}
               {% include card.html %}
             {% endfor %}
 
