--- a/_includes/dropdown.html
+++ b/_includes/dropdown.html
@@ -1,6 +1,6 @@
 <div class="dropdown is-hoverable">
     <a class="header__link dropdown-trigger">
-      SIGS
+      Clubs
     </a>
     <div class="dropdown-menu" id="dropdown-menu4" role="menu">
       <div class="dropdown-content">
