--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -1,18 +1,18 @@
 footer {
+  background-color:rgba(33,33,33,0.6);
   padding: 2.8125rem 0;
   border-top: 1px solid #f0f0f0;
   text-align: center;
   font-size: 0.875rem;
-  color: rgba(33,33,33,0.6);
+  color: #f0f0f0;;
 
   a {
-    color: rgba(33,33,33,0.6);
+    color: #f0f0f0;;
     border-bottom: 0;
 
     &:hover,
     &:focus {
       color: $primary;
-      border-bottom: 0;
     }
   }
 }
@@ -21,11 +21,12 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 200px;
+  max-width: 220px;
   margin: 0 auto 25px;
 }
 
 .social__link:not(:last-child) {
+  height: 1.5rem;
   margin-right: 1.5rem;
 }
 
