--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@ layout: compress
        
       <section class="blog">
         <div class="container">
-          <h1  class="post-title" style="text-align: center;">Past Events</h1>
+          <h1  class="post-title" style="text-align: center;">Event Articles</h1>
           <div class="post-list" itemscope="" itemtype="http://schema.org/Blog">
        
             {% for post in site.posts limit: 10 %}
