webiste summer update

--- a/_includes/portrait.html
+++ b/_includes/portrait.html
@@ -7,17 +7,29 @@
   {% assign member = include %}
 {% endif %}
 
+{% assign type = site.data.types[member.role] %}
 <div class="portrait-wrapper">
-  <!--
-        {% if page.slug != member.slug %}
-      href="{{ member.url | relative_url }}"
-    {% endif %}
-  -->
+
   <a
+    {% if member.type %}
+    {% if page.slug != member.slug %}
+      {% if member.link %}
+      href="{{ member.link}}"
+      {% else %}
+      href="{{ member.url| relative_url }}"
+      {% endif %}
+    {% endif %}
+    {% endif %}
     class="portrait"
     data-style="{{ include.style }}"
     aria-label="{{ member.name | default: "member link" }}"
   >
+  
+
+    {% if type %}
+      {% include icon.html icon=type.icon %}
+    {% endif %}
+
     <img
       src="{{ member.image | relative_url }}"
       class="portrait-image"
@@ -25,22 +37,21 @@
       loading="lazy"
       {% include fallback.html %}
     >
+    {% if member.name %}
+      <span class="portrait-name">
+        {{ member.name }}
+      </span>
+    {% endif %}
 
-    {% if member.name or member.role or member.description %}
-      <span class="portrait-text">
-        {% if member.name %}
-          <span class="portrait-name">
-            {{ member.name }}
-          </span>
-        {% endif %}
+    {% if member.description or type %}
+      <span class="portrait-description">
+        {{ member.description | default: type.description }}
+      </span>
+    {% endif %}
 
-        {% if member.role or member.description %}
-          <span class="portrait-role">
-            {% assign type = site.data.types[member.role] %}
-            {% include icon.html icon=type.icon %}
-            <span>{{ member.description | default: type.description }}</span>
-          </span>
-        {% endif %}
+    {% if member.affiliation %}
+      <span class="portrait-affiliation">
+        {{ member.affiliation }}
       </span>
     {% endif %}
   </a>
